--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,11 @@ gunicorn==20.1.0
 idna==2.10
 jmespath==0.9.3
 Pillow==8.0.1
+psyciog2==2.9.3
 python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.0
 s3transfer==0.2.0
 six==1.15.0
-urllib3==1.23
-whitenoise==4.1.2
+urllib3==1.26.2
+whitenoise==6.0.0
